# experimental_concepts

./: CMakeLists.txt  common_reference.hpp  common_type.hpp  experimental_concepts.hpp  experimental_type_traits.hpp  main.cpp  non_std_numerics.hpp  requires_expression.hpp  test_types.hpp  universal_references.hpp
.old/: main.cpp  non_std_numerics.hpp  test_type_traits.hpp  universal_references.hpp
include/conceptslib/: concepts.hpp  type_traits.hpp
include/conceptslib/detail/: common_reference.hpp  common_type.hpp  type_traits.hpp
include/conceptslib/detail/concepts/: callable.hpp  comparison.hpp  concepts.hpp  core.hpp  invocable_default.hpp  invocable_workaround.hpp  movable.hpp  object.hpp
include/conceptslib/detail/functional/: invoke.hpp
include/conceptslib/detail/macros/: platform_detection.hpp
include/conceptslib/detail/type_traits/: common_reference.hpp  common_type.hpp  type_traits.hpp
tests/: CMakeLists.txt  CMakeLists.txt.in  test_concepts.hpp  test_main.cpp  test_type_traits.hpp  test_types.hpp  universal_references.hpp
tests/concepts/: callable.cpp  comparison.cpp  core.cpp  object.cpp
tests/concepts/include/: testing.hpp
tests/type_traits/: common_reference.cpp  common_type.cpp  type_traits.cpp
